--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
   "dependencies": {
     "express": "^4.17.1"
   },
-  "scripts": "node ./server/js"
+  "scripts":{
+    "start": "node ./server.js"
+  }
 }
